# payment_system

payment-intelli/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
payment-intelli/docs/: architecture.md  events.md  ontology.md
payment-intelli/docs/adr/: 0001-record-architecture-decisions.md
payment-intelli/infra/: .env.example  docker-compose.yml
payment-intelli/infra/kafka/: topics.txt
payment-intelli/libs/common/: pyproject.toml
payment-intelli/libs/common/src/intellipay/common/: __init__.py  context.py  idempotency.py  kafka.py  outbox.py  relay.py
payment-intelli/libs/common/tests/: conftest.py  test_context.py  test_idempotency.py  test_outbox.py  test_relay.py
payment-intelli/libs/contracts/: pyproject.toml
payment-intelli/libs/contracts/src/intellipay/contracts/: __init__.py  envelope.py  payments.py  semantic.py
payment-intelli/libs/contracts/tests/: test_contracts.py
payment-intelli/services/payment-api/: pyproject.toml
payment-intelli/services/payment-api/app/: __init__.py
