# libs/contracts — the shared event/command spine (CLAUDE.md §5).
# Packaged (hatchling) so producers and consumers import the SAME models; contract
# drift surfaces as a type error, not a 2am incident.
[project]
name = "intellipay-contracts"
version = "0.1.0"
description = "Shared, typed event & command contracts for intelli-pay"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ships the `intellipay` namespace dir; `contracts` is the package.
packages = ["src/intellipay"]
