# services/payment-api — public FastAPI edge + orchestration saga (CLAUDE.md §5, §2).
# An application, not a library: no [build-system]. uv manages its deps in the shared venv;
# it runs via uvicorn against `app.main:app`. Real wiring lands in Slice 4.
[project]
name = "payment-api"
version = "0.1.0"
description = "Public payment edge and orchestration saga for intelli-pay"
requires-python = ">=3.14"
dependencies = [
    "intellipay-contracts",
    "intellipay-common",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
intellipay-contracts = { workspace = true }
intellipay-common = { workspace = true }
